--- a/AppFilRougeLibrary/FilRougeLibrary/FilRougeLibrary.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRougeLibrary.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contact.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quizz.cs" />
     <Compile Include="Technologies.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
