--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Library.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Library.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7FE5EDC5-3FCC-465B-A1EE-EEC622A085D0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>FilRougeTesting</RootNamespace>
-    <AssemblyName>FilRougeTesting</AssemblyName>
+    <ProjectGuid>{26A802CC-F50E-4BE0-91D9-470C77FA6540}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>FilRouge.Library</RootNamespace>
+    <AssemblyName>FilRouge.Library</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Contact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FilRougeLibrary\FilRougeLibrary.csproj">
-      <Project>{26a802cc-f50e-4be0-91d9-470c77fa6540}</Project>
-      <Name>FilRougeLibrary</Name>
-    </ProjectReference>
+    <Compile Include="Quizz.cs" />
+    <Compile Include="Technologies.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
