--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Library.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Library.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Contact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Questions.cs" />
     <Compile Include="Quizz.cs" />
     <Compile Include="Technologies.cs" />
   </ItemGroup>
