--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Library.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Library.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datas\Contact.cs" />
+    <Compile Include="Datas\Reponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Datas\Questions.cs" />
     <Compile Include="Datas\Quizz.cs" />
