--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
@@ -63,19 +63,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Datas\Contact.cs" />
-    <Compile Include="Datas\Reponse.cs" />
+    <Compile Include="Entities\Contact.cs" />
+    <Compile Include="Entities\Reponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Datas\Questions.cs" />
-    <Compile Include="Datas\Quizz.cs" />
-    <Compile Include="Datas\Technologies.cs" />
+    <Compile Include="Entities\Questions.cs" />
+    <Compile Include="Entities\Quizz.cs" />
+    <Compile Include="Entities\Technologies.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Datas\packages.config" />
+    <None Include="Entities\packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
