Création de la base avec Code FIrst/ enlever les commentaires dans le constructeur de FilRougeDBContext pour initialiser une base

--- a/AppFilRougeLibrary/FilRouge.Testing/FilRouge.Testing.csproj
+++ b/AppFilRougeLibrary/FilRouge.Testing/FilRouge.Testing.csproj
@@ -56,5 +56,15 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FilRouge.Services\FilRouge.Services.csproj">
+      <Project>{0aefc636-93b9-4981-a7ec-26b359ae1375}</Project>
+      <Name>FilRouge.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FilRougeLibrary\FilRouge.Entities.csproj">
+      <Project>{26a802cc-f50e-4be0-91d9-470c77fa6540}</Project>
+      <Name>FilRouge.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
