--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
@@ -64,28 +64,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Contact.cs" />
-    <Compile Include="Entities\Difficulties.cs" />
+    <Compile Include="Entities\Difficulty.cs" />
     <Compile Include="Entities\EtatQuizz.cs" />
     <Compile Include="Entities\FilRougeDBContext.cs" />
     <Compile Include="Entities\Reponse.cs" />
     <Compile Include="Entities\UserReponse.cs" />
-    <Compile Include="Migrations\201803121759367_InitialCreate.cs" />
-    <Compile Include="Migrations\201803121759367_InitialCreate.Designer.cs">
-      <DependentUpon>201803121759367_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803122242062_FilRougeDBContext-v1.cs" />
-    <Compile Include="Migrations\201803122242062_FilRougeDBContext-v1.Designer.cs">
-      <DependentUpon>201803122242062_FilRougeDBContext-v1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803122250353_FilRougeDBContext-v2.cs" />
-    <Compile Include="Migrations\201803122250353_FilRougeDBContext-v2.Designer.cs">
-      <DependentUpon>201803122250353_FilRougeDBContext-v2.cs</DependentUpon>
+    <Compile Include="Migrations\201803182136236_FilRougeDBContext-v1.cs" />
+    <Compile Include="Migrations\201803182136236_FilRougeDBContext-v1.Designer.cs">
+      <DependentUpon>201803182136236_FilRougeDBContext-v1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\Questions.cs" />
+    <Compile Include="Entities\Question.cs" />
     <Compile Include="Entities\Quizz.cs" />
-    <Compile Include="Entities\Technologies.cs" />
+    <Compile Include="Entities\Technologie.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -98,14 +90,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201803121759367_InitialCreate.resx">
-      <DependentUpon>201803121759367_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803122242062_FilRougeDBContext-v1.resx">
-      <DependentUpon>201803122242062_FilRougeDBContext-v1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803122250353_FilRougeDBContext-v2.resx">
-      <DependentUpon>201803122250353_FilRougeDBContext-v2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803182136236_FilRougeDBContext-v1.resx">
+      <DependentUpon>201803182136236_FilRougeDBContext-v1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
