--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\FilRouge.Entities.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -65,13 +66,16 @@
   <ItemGroup>
     <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\Difficulties.cs" />
-    <Compile Include="Entities\EtatQuizz.cs" />
     <Compile Include="Entities\FilRougeDBContext.cs" />
     <Compile Include="Entities\Reponse.cs" />
     <Compile Include="Entities\UserReponse.cs" />
-    <Compile Include="Migrations\201803131519158_InitialCreate.cs" />
-    <Compile Include="Migrations\201803131519158_InitialCreate.Designer.cs">
-      <DependentUpon>201803131519158_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201803191459131_FilRougeDBContext-v1.cs" />
+    <Compile Include="Migrations\201803191459131_FilRougeDBContext-v1.Designer.cs">
+      <DependentUpon>201803191459131_FilRougeDBContext-v1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803191504315_FilRougeDBContext-v2.cs" />
+    <Compile Include="Migrations\201803191504315_FilRougeDBContext-v2.Designer.cs">
+      <DependentUpon>201803191504315_FilRougeDBContext-v2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,8 +94,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201803131519158_InitialCreate.resx">
-      <DependentUpon>201803131519158_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803191459131_FilRougeDBContext-v1.resx">
+      <DependentUpon>201803191459131_FilRougeDBContext-v1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803191504315_FilRougeDBContext-v2.resx">
+      <DependentUpon>201803191504315_FilRougeDBContext-v2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
