--- a/AppFilRougeLibrary/FilRouge.Services/FilRouge.Services.csproj
+++ b/AppFilRougeLibrary/FilRouge.Services/FilRouge.Services.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBFiller.cs" />
     <Compile Include="QuizzExceptions.cs" />
     <Compile Include="QuizzService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
