--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Entities.csproj
@@ -65,25 +65,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Contact.cs" />
-    <Compile Include="Entities\Difficulties.cs" />
+    <Compile Include="Entities\Difficulty.cs" />
+    <Compile Include="Entities\DifficultyMaster.cs" />
     <Compile Include="Entities\DifficultyRate.cs" />
     <Compile Include="Entities\FilRougeDBContext.cs" />
     <Compile Include="Entities\Reponse.cs" />
     <Compile Include="Entities\TypeQuestion.cs" />
     <Compile Include="Entities\UserReponse.cs" />
-    <Compile Include="Migrations\201803191459131_FilRougeDBContext-v1.cs" />
-    <Compile Include="Migrations\201803191459131_FilRougeDBContext-v1.Designer.cs">
-      <DependentUpon>201803191459131_FilRougeDBContext-v1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201803191504315_FilRougeDBContext-v2.cs" />
-    <Compile Include="Migrations\201803191504315_FilRougeDBContext-v2.Designer.cs">
-      <DependentUpon>201803191504315_FilRougeDBContext-v2.cs</DependentUpon>
+    <Compile Include="Migrations\201803251451273_FilRougeDBContext-v1.cs" />
+    <Compile Include="Migrations\201803251451273_FilRougeDBContext-v1.Designer.cs">
+      <DependentUpon>201803251451273_FilRougeDBContext-v1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Questions.cs" />
     <Compile Include="Entities\Quizz.cs" />
-    <Compile Include="Entities\Technologies.cs" />
+    <Compile Include="Entities\Technology.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -96,11 +93,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201803191459131_FilRougeDBContext-v1.resx">
-      <DependentUpon>201803191459131_FilRougeDBContext-v1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201803191504315_FilRougeDBContext-v2.resx">
-      <DependentUpon>201803191504315_FilRougeDBContext-v2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803251451273_FilRougeDBContext-v1.resx">
+      <DependentUpon>201803251451273_FilRougeDBContext-v1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
