--- a/AppFilRougeLibrary/FilRouge.Testing/App.config
+++ b/AppFilRougeLibrary/FilRouge.Testing/App.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entities Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="EntitiesFramework" type="System.Data.Entities.Internal.ConfigFile.EntitiesFrameworkSection, EntitiesFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+  <EntitiesFramework>
+    <defaultConnectionFactory type="System.Data.Entities.Infrastructure.SqlConnectionFactory, EntitiesFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entities.SqlServer.SqlProviderServices, EntitiesFramework.SqlServer" />
     </providers>
-  </entityFramework>
+  </EntitiesFramework>
 </configuration>
