--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Model.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Model.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Entities\Reponse.cs" />
     <Compile Include="Entities\TypeQuestion.cs" />
     <Compile Include="Entities\UserReponse.cs" />
+    <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Questions.cs" />
     <Compile Include="Entities\Quizz.cs" />
@@ -87,5 +88,6 @@
     <None Include="Entities\packages.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
