--- a/AppFilRougeLibrary/FilRouge.Web/Web.config
+++ b/AppFilRougeLibrary/FilRouge.Web/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FilRouge.Web-20180330091852.mdf;Initial Catalog=aspnet-FilRouge.Web-20180330091852;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StringBDDAppliFilRouge"
+        connectionString="Server=FORMATI-PR1218G\SQLEXPRESS;Database=BDDAppliFilRouge;integrated security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
