--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Model.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Model.csproj
@@ -77,10 +77,10 @@
       <DependentUpon>201803300935517_FilRougeDBContext-v1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Model\QuizzModel.cs" />
     <Compile Include="Model\QuestionModel.cs" />
+    <Compile Include="Model\QuizzModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\Questions.cs" />
+    <Compile Include="Entities\Question.cs" />
     <Compile Include="Entities\Quizz.cs" />
     <Compile Include="Entities\Technology.cs" />
   </ItemGroup>
