--- a/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Model.csproj
+++ b/AppFilRougeLibrary/FilRougeLibrary/FilRouge.Model.csproj
@@ -66,23 +66,23 @@
   <ItemGroup>
     <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\Difficulty.cs" />
-    <Compile Include="Entities\DifficultyMaster.cs" />
     <Compile Include="Entities\DifficultyRate.cs" />
     <Compile Include="Entities\FilRougeDBContext.cs" />
+    <Compile Include="Entities\Question.cs" />
+    <Compile Include="Entities\QuestionQuizz.cs" />
+    <Compile Include="Entities\Quizz.cs" />
     <Compile Include="Entities\Reponse.cs" />
+    <Compile Include="Entities\Technology.cs" />
     <Compile Include="Entities\TypeQuestion.cs" />
     <Compile Include="Entities\UserReponse.cs" />
-    <Compile Include="Migrations\201803300935517_FilRougeDBContext-v1.cs" />
-    <Compile Include="Migrations\201803300935517_FilRougeDBContext-v1.Designer.cs">
-      <DependentUpon>201803300935517_FilRougeDBContext-v1.cs</DependentUpon>
+    <Compile Include="Migrations\201804031235544_FilRougeDBContext-v1.cs" />
+    <Compile Include="Migrations\201804031235544_FilRougeDBContext-v1.Designer.cs">
+      <DependentUpon>201804031235544_FilRougeDBContext-v1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\QuestionModel.cs" />
     <Compile Include="Model\QuizzModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\Question.cs" />
-    <Compile Include="Entities\Quizz.cs" />
-    <Compile Include="Entities\Technology.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -91,12 +91,11 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Entities\packages.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201803300935517_FilRougeDBContext-v1.resx">
-      <DependentUpon>201803300935517_FilRougeDBContext-v1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201804031235544_FilRougeDBContext-v1.resx">
+      <DependentUpon>201804031235544_FilRougeDBContext-v1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
