Premiers adds de Marc

--- a/AppFilRougeLibrary/FilRouge.Web/Web.config
+++ b/AppFilRougeLibrary/FilRouge.Web/Web.config
@@ -87,8 +87,10 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="StringConnexion"
-         connectionString="data source=localhost\SQLEXPRESS;initial catalog=FilRouge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-         providerName="System.Data.SqlClient" />
+    <!-- Chaine de connection de Nicolas
+         <add name="StringConnexion" connectionString="data source=localhost/SQLEXPRESS;initial catalog=FilRouge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+         -->
+    <!-- Chaine de connection de Marc -->
+    <add name="StringConnexion" connectionString="data source=localhost;initial catalog=FilRouge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
