--- a/AppFilRougeLibrary/FilRouge.Web/Web.config
+++ b/AppFilRougeLibrary/FilRouge.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FilRouge.Web-20180403044822.mdf;Initial Catalog=FilRouge;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=FilRouge;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
