--- a/AppFilRougeLibrary/FilRouge.Model/App.config
+++ b/AppFilRougeLibrary/FilRouge.Model/App.config
@@ -35,6 +35,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-<add name="ConnexionStringFilRouge" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+<add name="ConnexionStringFilRouge" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
