--- a/AppFilRougeLibrary/FilRouge.Model/App.config
+++ b/AppFilRougeLibrary/FilRouge.Model/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -35,6 +35,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-<add name="ConnexionStringFilRouge" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+<add name="ConnexionStringFilRouge" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
