Restructuration des viewModels

--- a/AppFilRougeLibrary/FilRouge.Web/Web.config
+++ b/AppFilRougeLibrary/FilRouge.Web/Web.config
@@ -91,6 +91,6 @@
          <add name="StringConnexion" connectionString="data source=localhost/SQLEXPRESS;initial catalog=FilRouge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
          -->
     <!-- Chaine de connection de Marc -->
-    <add name="StringConnexion" connectionString="data source=localhost;initial catalog=FilRouge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="data source=localhost;initial catalog=FilRouge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
