--- a/AppFilRougeLibrary/FilRouge.Web/Web.config
+++ b/AppFilRougeLibrary/FilRouge.Web/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=FilRouge;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
