Mise à jour complète

--- a/AppFilRougeLibrary/FilRouge.Model/App.config
+++ b/AppFilRougeLibrary/FilRouge.Model/App.config
@@ -41,7 +41,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
